--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
       - run: chmod 600 "$HOME/.ssh/key"
       # Deploy
       - run: rsync -e "ssh -p 22 -i $HOME/.ssh/key -o
-          StrictHostKeyChecking=no" --exclude 'node_modules/*' --archive --compress --delete .
+          StrictHostKeyChecking=no" --exclude 'node_modules/*'  --exclude '.github/*' --exclude '.git/*' --archive --compress --delete .
           mymcicu@mymc.icu:/home/mymcicu/repositories/project-nodejs_55-5_backend
