--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server"
+    "start": "node ./server",
+    "start:dev": "nodemon ./server"
   },
   "repository": {
     "type": "git",
