--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/NilKad/project-nodejs_55-5_backend#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1"
