add package mogoose-email

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.8.4",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
+    "mongoose-type-email": "^1.1.2",
     "mongoose-type-url": "^2.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
