--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,13 @@ jobs:
       #    branch: gh-pages
       #    folder: build
 
-      #- run: set -eu
-      #- run: mkdir "$HOME/.ssh"
-      #- run: echo "${{ secrets.mymcicu }}" > "$HOME/.ssh/key"
-      #- run: chmod 600 "$HOME/.ssh/key"
-      # Deploy
-      #- run: rsync -e "ssh -p 22 -i $HOME/.ssh/key -o
-      #    StrictHostKeyChecking=no"  --archive --compress --delete  --exclude '.github' --exclude '.git' . mymcicu@mymc.icu:/home/mymcicu/repositories/project-nodejs_55-5_backend
+      - run: set -eu
+      - run: mkdir "$HOME/.ssh"
+      - run: echo "${{ secrets.mymcicu }}" > "$HOME/.ssh/key"
+      - run: chmod 600 "$HOME/.ssh/key"
+      #Deploy
+      - run:
+          rsync -e "ssh -p 22 -i $HOME/.ssh/key -o
+          StrictHostKeyChecking=no"  --archive --compress --delete  --exclude
+          '.github' --exclude '.git' .
+          mymcicu@mymc.icu:/home/mymcicu/repositories/project-nodejs_55-5_backend
